infras/envoy/envoy-dev/envoy-dev.yaml
# envoy dev config
# proxy grpc-web to grpc
# Edit the template not the generated config!
# author: linggawasistha djohari <linggawasistha.djohari@outlook.com>

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0 , port_value: 9001 }
      filter_chains:
      - filters:
        - name: envoy.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            # IMPORTANT codec_type & stat_prefix
            codec_type: auto
            stat_prefix: ingress_http
            http_filters:
            - name: envoy.filters.http.grpc_web
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
            - name: envoy.filters.http.cors
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
            - name: envoy.ext_authz
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                transport_api_version: V3
                with_request_body:
                  max_request_bytes: 8192
                  allow_partial_message: true
                failure_mode_allow: false
                grpc_service:
                  google_grpc:
                    target_uri: 0.0.0.0:9003 
                    #cluster: trident_cluster
                    stat_prefix: ext_authz
                  timeout: 2s
            # - name: envoy.filters.http.grpc_json_transcoder
            #   typed_config:
            #     "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
            #     proto_descriptor: "protos/helloworld.pb"
            #     services: ["helloworld.Greeter"]
            #     print_options:
            #       add_whitespace: true
            #       always_print_primitive_fields: true
            #       always_print_enums_as_ints: false
            #       preserve_proto_field_names: false
            - name: envoy.filters.http.router
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
            route_config:
              name: local_route
              virtual_hosts:
              - name: local_service
                domains: ["*"]
                routes:
                - match: { prefix: "/tretacore/" }
                  route:  { prefix_rewrite: "/", cluster: tretacore_cluster }
                - match: { prefix: "/trident/" }
                  route:  { prefix_rewrite: "/", cluster: trident_cluster }
                cors:
                      allow_origin_string_match:
                        - prefix: "*"
                      allow_methods: GET, PUT, DELETE, POST, OPTIONS
                      allow_headers: Authorization, keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                      max_age: "3600"
                      expose_headers: custom-header-1,grpc-status,grpc-message
  clusters: 
    - name: tretacore_cluster
      type: STATIC
      # Comment out the following line to test on v6 networks
      dns_lookup_family: V4_ONLY
      connect_timeout: 0.3s
      lb_policy: round_robin
      # IMPORTANT http2_protocol_options otherwise you would greet by 502 or 503
      http2_protocol_options: {}
      load_assignment:
        cluster_name: tretacore_cluster
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 0.0.0.0
                  port_value: 9002
    - name: trident_cluster
      type: STATIC
      # Comment out the following line to test on v6 networks
      dns_lookup_family: V4_ONLY
      connect_timeout: 0.3s
      lb_policy: round_robin
      # IMPORTANT http2_protocol_options otherwise you would greet by 502 or 503
      http2_protocol_options: {}
      load_assignment:
        cluster_name: trident_cluster
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 0.0.0.0
                  port_value: 9003
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
layered_runtime:
  layers:
    - name: static_layer_0
      static_layer:
        envoy:
          resource_limits:
            listener:
              listener_0:
                connection_limit: 50000
        overload:
          global_downstream_max_connections: 100000
